--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -58,6 +58,7 @@ table {
 #header h1
 {
 	font-style: italic;
+  text-align: center;
 }
 
 #tweet {
@@ -69,12 +70,11 @@ table {
 	list-style-type: none;
 	font-size: 0.9em;
 	padding: 0.8em 0 1em 0;
-/*	border-bottom: 1px solid #ccc;*/
+	word-wrap: break-line;
 }
 
 #tweet li a {
 	word-wrap: break-word;
-	display: block;
 }
 
 a, a:visited {
@@ -91,33 +91,22 @@ a:hover{
 #content
 {
 	font-size: 110%;
-	width: 800px;
 	text-align: left;
-	margin: 3em auto 2em auto;
 }
 
 #main
 {
-	width: 550px;
-	margin-right: 30px;
-	float: left;
 	line-height: 1.5em;
-/*	padding: 0px 10px 0px 10px; */
 }
 
 #right
 {
-	width: 220px;
 	text-align: left;
-	float: right;
 }
 
 #footer
 {
-	width: 800px;
-	margin: 3em auto 2em auto;
 	border-top: thin dashed gray;
-	clear: both;
 	padding-bottom: 80px;
 	padding-top: 25px;
 }
@@ -199,10 +188,28 @@ a.read_more
 
 .description
 {
+  display: block;
 	font-size: .8em;
+}
+
+#header .hidden-phone .description
+{
+  text-align: center;
+}
+
+#header .visible-phone .description
+{
+  width: 300px;
+  margin: 0em auto 0em auto;
 }
 
 li 
 {
 	margin-left: 30px;
+}
+
+input.inline
+{
+  display: inline-block;
+  float: left;
 }
